<resources>
    <string name="app_name">BasicArchitecture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_date_dd_mm_yyyy">Birth date (dd.mm.yyyy)</string>
    <string name="next">Next</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="you_must_be_18">You must be 18+</string>
    <string name="summary">Review &amp; Confirm</string>
    <string name="interests">Interests</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="load_counties">Load counties: %1$s</string>
    <string name="load_cities">Load cities: %1$s</string>
    <string name="load_address">"load address suggression: %1$s"</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="choose_you_location">Choose Your Location</string>
    <string name="select_interests">Select Interests</string>
    <string name="back_door">Ветеранов</string>
</resources>