<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SummaryFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Name -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNameLabel"
        style="@style/LabelStyle"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvNameLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Surname -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSurnameLabel"
        style="@style/LabelStyle"
        android:text="@string/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSurname"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSurnameLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Date of Birth -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDobLabel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        app:layout_constraintTop_toBottomOf="@id/tvSurname"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDob"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDobLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Address -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddressLabel"
        style="@style/LabelStyle"
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDob"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddress"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAddressLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Interests -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvInterestsLabel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interests"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvInterestsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:flexWrap="wrap"
        app:alignItems="center">
    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
