<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameFragment"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="24dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"

        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="?attr/colorButtonStroke"
        app:boxBackgroundColor="?attr/colorInputTextBackground"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="?attr/colorButtonStroke"
            android:textSize="20sp"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        android:layout_marginTop="16dp"
        android:textAlignment="center"

        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="?attr/colorButtonStroke"
        app:boxBackgroundColor="?attr/colorInputTextBackground"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"

            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthDateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date_dd_mm_yyyy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout"
        android:layout_marginTop="16dp"
        android:textAlignment="center"

        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="?attr/colorButtonStroke"
        app:boxBackgroundColor="?attr/colorInputTextBackground"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="20sp"

            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="24dp"
        app:strokeColor="?attr/colorButtonStroke"
        app:strokeWidth="2dp"
        android:textColor="?attr/colorButtonStroke"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
