<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressFragment">

    <!-- Input for Country -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/country"
        android:layout_marginTop="32dp"
        android:labelFor="@id/countryInput"

        android:textAlignment="center"

        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="?attr/colorButtonStroke"
        app:boxBackgroundColor="?attr/colorInputTextBackground"

        >
        <!--
        com.google.android.material.textfield.TextInputEditText
        -->
        <AutoCompleteTextView
            android:id="@+id/countryInput"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            android:inputType="text"

            android:textAlignment="center"
            android:textColor="?attr/colorButtonStroke"
            android:textSize="20sp"
            android:gravity="center"

            android:completionThreshold="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input for City -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/countryInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/city"
        android:layout_marginTop="16dp"
        android:labelFor="@id/cityInput"

        android:textAlignment="center"

        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="?attr/colorButtonStroke"
        app:boxBackgroundColor="?attr/colorInputTextBackground"

        >
        <!--
        com.google.android.material.textfield.TextInputEditText
        -->
        <AutoCompleteTextView
            android:id="@+id/cityInput"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            android:inputType="text"

            android:textAlignment="center"
            android:textColor="?attr/colorButtonStroke"
            android:textSize="20sp"
            android:gravity="center"

            android:completionThreshold="1"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input for Address -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cityInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/address"
        android:layout_marginTop="16dp"
        android:labelFor="@id/addressInput"

        android:textAlignment="center"

        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="?attr/colorButtonStroke"
        app:boxBackgroundColor="?attr/colorInputTextBackground"


        >
        <!--
        com.google.android.material.textfield.TextInputEditText
        -->
        <AutoCompleteTextView
            android:id="@+id/addressInput"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:inputType="text"

            android:textAlignment="center"
            android:textColor="?attr/colorButtonStroke"
            android:textSize="20sp"
            android:gravity="center"

            android:completionThreshold="1"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="24dp"
        app:strokeColor="?attr/colorButtonStroke"
        app:strokeWidth="2dp"
        android:textColor="?attr/colorButtonStroke"
        />

</androidx.constraintlayout.widget.ConstraintLayout>